FIX: use poky github mirror since yocto server is very slow

--- a/kas/include/mender-base.yml
+++ b/kas/include/mender-base.yml
@@ -5,7 +5,7 @@ distro: poky
 
 repos:
   poky:
-    url: git://git.yoctoproject.org/poky
+    url: https://github.com/yoctoproject/poky.git
     commit: 7fb368604c5c7295a910ffd2d8dba7b9f00b8462
     layers:
       meta:
